# FFmpeg_plus_plus

./: NODE_EDITOR.md  README.md  cli.py  requirements.txt  server.py
.github/workflows/: build-release.yml
backend/: __init__.py  executor.py  installer.py  parser.py  probe.py  subtitle.py  transcoder.py
backend/utils/: __init__.py  constants.py  exceptions.py  validators.py
ffmpegpp_gui/: README.md  nuitka-crash-report.xml  pubspec.yaml
ffmpegpp_gui/assets/: lanzou_helper.py
ffmpegpp_gui/lib/: app.dart  main.dart
ffmpegpp_gui/lib/models/: models.dart
ffmpegpp_gui/lib/pages/: ai_page.dart  command_page.dart  config_library_page.dart  container_detail_page.dart  keybinding_page.dart  log_page.dart  pipeline_editor_page.dart  project_page.dart  queue_page.dart  settings_page.dart
ffmpegpp_gui/lib/providers/: app_state.dart
ffmpegpp_gui/lib/services/: backend_client.dart  config_export.dart  config_service.dart  ffmpeg_installer.dart  frame_preview.dart  graph_executor.dart  integrity.dart  lanzou_downloader.dart  native_bridge.dart  native_process.dart  python_process.dart  system_monitor.dart  update_service.dart
ffmpegpp_gui/lib/theme/: app_strings.dart  app_theme.dart
ffmpegpp_gui/lib/widgets/: config_dialog.dart  container_card.dart  font_picker.dart  glass_panel.dart  install_dialog.dart  masonry_grid.dart  sidebar.dart  task_card.dart  toast.dart  video_card.dart
ffmpegpp_gui/lib/widgets/step_editors/: audio_compressor_step_editor.dart  audio_convert_step_editor.dart  audio_metadata_step_editor.dart  audio_quality_step_editor.dart  audio_speed_step_editor.dart  audio_volume_step_editor.dart  av_process_step_editor.dart  clip_step_editor.dart  concat_media_step_editor.dart  extract_audio_step_editor.dart  frame_step_editor.dart  image_brightness_step_editor.dart  image_channel_extract_step_editor.dart  image_convert_step_editor.dart  image_crop_step_editor.dart  image_denoise_step_editor.dart  image_noise_step_editor.dart  image_rotate_step_editor.dart  image_scale_step_editor.dart  image_sharpen_step_editor.dart  image_to_video_step_editor.dart  logic_block_editor.dart  output_step_editor.dart  speed_step_editor.dart  start_step_editor.dart  subtitle_step_editor.dart  video_crop_step_editor.dart
ffmpegpp_gui/linux/: CMakeLists.txt
ffmpegpp_gui/linux/runner/: my_application.cc
ffmpegpp_gui/macos/Flutter/: GeneratedPluginRegistrant.swift
ffmpegpp_gui/macos/Runner/: DebugProfile.entitlements  Release.entitlements
ffmpegpp_gui/macos/Runner.xcodeproj/: project.pbxproj
ffmpegpp_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ffmpegpp_gui/macos/Runner/Configs/: AppInfo.xcconfig
ffmpegpp_gui/windows/: CMakeLists.txt
ffmpegpp_gui/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  runner.exe.manifest
make/: setup.iss
server_cpp/: .gitignore  CMakeLists.txt  icon.rc  icon.res  manifest.rc  patch_manifest.py
server_cpp/src/: audit.cpp  audit.h  constants.h  dll_main.cpp  ffmpeg_features.cpp  ffmpeg_features.h  ffmpegpp_exports.h  handlers.cpp  handlers.h  installer.cpp  installer.h  json_io.cpp  json_io.h  main.cpp  message_queues.cpp  message_queues.h  parser.cpp  parser.h  probe.cpp  probe.h  subprocess.cpp  subprocess.h  subtitle.cpp  subtitle.h  transcoder.cpp  transcoder.h
